--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.9",
     "lucide-react": "^0.563.0",
+    "moment": "^2.30.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
